	PR tree-optimization/24262 	* tree-data-ref.c (analyze_offset_expr): Check that init is invariant 	in loop all the time.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105368 138bc75d-0d04-0410-961f-82ee72b054a4